# funny-qr

./: Cargo.toml  LICENSE  README.md
src/: main.rs
